Fix title alignments

--- a/main.css
+++ b/main.css
@@ -466,6 +466,7 @@ header {
   column-gap: 2em;
   align-items: center;
   margin-bottom: 2em;
+  justify-content: center;
 }
 
 h1 {
